Sliding Nav Fixes
This commit creates the scrolling animation smoother.

Known issue: slidingNav disappears under website when sidebar is opened.

--- a/css/output.css
+++ b/css/output.css
@@ -59,12 +59,15 @@
   overflow-y: auto;
   position: fixed;
   right: 0;
+  top: 0;
+  z-index: 5;
 }
 
 .website {
   background: white;
-  transform: translate3d(0, 0, 50px);
   transition: ease-in-out 0.25s;
+  z-index: 10;
+  position: relative;
 }
 .website::before {
   content: " ";
@@ -73,13 +76,13 @@
   height: 100%;
   background: black;
   opacity: 0;
-  z-index: 10;
+  z-index: 20;
   transition: 0.2s ease-in-out;
   pointer-events: none;
 }
 
 .website.active {
-  transform: translate3d(-350px, 0, 50px);
+  transform: translateX(-350px);
 }
 .website.active::before {
   pointer-events: all;
@@ -90,6 +93,7 @@
 .homepage {
   margin: 0px;
   overflow-x: hidden;
+  position: relative;
 }
 
 header {
@@ -1564,12 +1568,13 @@ header .container img {
 }
 
 .slidingNav {
-  position: sticky;
-  top: 0px;
-  z-index: 500;
-  height: 0px;
+  position: fixed;
+  top: -210px;
+  z-index: 50;
+  height: 210px;
+  width: 100%;
   transition: 0.5s ease-in-out;
-  transform: translateY(-210px);
+  transform: translateY(210px);
 }
 .slidingNav header, .slidingNav .main-nav {
   position: relative;
