--- a/css/sass/partials/_layout.scss
+++ b/css/sass/partials/_layout.scss
@@ -8,12 +8,18 @@
     overflow-y: auto;
     position: fixed;
     right: 0;
+    top: 0;
+    z-index: 5;
 }
 
 .website {
     background: white;
-    transform: translate3d(0, 0, 50px);             // This is the Styling for when the menu is animated (Closed)
+    // transform: translateX(0px);             // This is the Styling for when the menu is animated (Closed)
     transition: ease-in-out .25s;
+    z-index: 10;
+
+    position: relative;
+
 
     &::before {
         content: " ";
@@ -22,15 +28,14 @@
         height: 100%;
         background: black;
         opacity: 0;
-        z-index: 10;
+        z-index: 20;
         transition: .2s ease-in-out;
         pointer-events: none;
     }
 }
 
 .website.active {
-    transform: translate3d(-350px, 0, 50px);        // Open Styling (Can test in browser)
-
+    transform: translateX(-350px);        // Open Styling (Can test in browser)
     &::before {
         pointer-events: all;
         cursor: pointer;
@@ -41,6 +46,7 @@
 .homepage {
     margin: 0px;
     overflow-x: hidden;
+    position: relative;
 }
 
 //--------------------------------------------------------------------
